syntax = "proto3";
package rewardchain.rewardchain;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "rewardchain/rewardchain/params.proto";
import "rewardchain/rewardchain/partner.proto";

option go_package = "rewardchain/x/rewardchain/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/rewardchain/rewardchain/params";
  }

  // Partner queries a single partner by id.
  rpc Partner(QueryPartnerRequest) returns (QueryPartnerResponse) {
    option (google.api.http).get = "/rewardchain/rewardchain/partners/{id}";
  }

  // Partners lists partners.
  rpc Partners(QueryPartnersRequest) returns (QueryPartnersResponse) {
    option (google.api.http).get = "/rewardchain/rewardchain/partners";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryPartnerRequest {
  uint64 id = 1;
}

message QueryPartnerResponse {
  Partner partner = 1 [(gogoproto.nullable) = false];
}

message QueryPartnersRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;

  // include_disabled controls whether disabled partners are returned.
  bool include_disabled = 2;
}

message QueryPartnersResponse {
  repeated Partner partners = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}