syntax = "proto3";

package rewardchain.rewardchain;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "rewardchain/rewardchain/params.proto";
import "rewardchain/rewardchain/partner.proto";

option go_package = "rewardchain/x/rewardchain/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams  (MsgUpdateParams ) returns (MsgUpdateParamsResponse );
  rpc CreatePartner (MsgCreatePartner) returns (MsgCreatePartnerResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                                 "authority";
  option           (amino.name) = "rewardchain/x/rewardchain/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreatePartner {
  option (cosmos.msg.v1.signer) = "creator";
  string creator          = 1;
  string name             = 2;
  string category         = 3;
  string country          = 4;
  string currency         = 5;
  string earnCostPerPoint = 6;
  string burnCostPerPoint = 7;
  string totalLiquidity   = 8;
}

message MsgCreatePartnerResponse {
  string id = 1;
}

